# Trekki

./: .gitignore  README.md  app.py  pyproject.toml
agents/: trip_agents.py
tools/: browser_tools.py  search_tools.py
