[project]
name = "trekki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.117.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.56",
    "streamlit>=1.44.1",
    "tools>=0.1.9",
    "unstructured>=0.17.2",
]
